==================
 Docutils History
==================

:Author: David Goodger; open to all Docutils developers
:Contact: docutils-develop@lists.sourceforge.net
:Date: $Date$
:Revision: $Revision$
:Web site: https://docutils.sourceforge.io/
:Copyright: This document has been placed in the public domain.

.. contents::

Changes Since 0.18.1
====================

* General
  
  - Dropped support for Python 2.7, 3.5, and 3.6.

* docutils/parsers/__init__.py

  - Alias for the "myst" parser (https://pypi.org/project/myst-docutils).
  - Use absolute module names in ``_parser_aliases`` instead of two
    import attempts. (Keeps details if the `recommonmark_wrapper.py` module
    raises an ImportError.)
  - Prepend parser name to ImportError if importing a parser class fails.

* docutils/parsers/recommonmark_wrapper.py

  - Raise ImportError, if import of the upstream parser module fails.
    If called from an `"include" directive`_,
    the system-message now has source/line info.

    .. _"include" directive: docs/ref/rst/directives.html#include

* docutils/parsers/rst/directives/__init__.py

  - parser_name() keeps details if converting ImportError to ValueError.

* docutils/parsers/rst/roles.py

  - Don't use mutable default values for function arguments. Fixes bug #430.

* test/DocutilsTestSupport.py

  - exception_data() returns None if no exception was raised.
  - recommonmark_wrapper only imported if upstream parser is present.

* test/test_parsers/test_rst/test_directives/test_tables.py

  - Fix bug #436: Null char valid in CSV since Python 3.11.

* tools/docutils-cli.py

  - Allow 3rd-party drop-in components for reader and parser, too.
  - Fix help output.


Release 0.18.1
==============

* docutils/nodes.py

  - Node.traverse() returns a list again to restore backwards
    compatibility. Fixes bug #431.

  - New method Node.findall(): like Node.traverse() but returns an
    iterator. Obsoletes Node.traverse().

* docutils/utils/__init__.py:
