@@ -54,6 +54,9 @@ Drop support for `old-format configuration files`_ in Docutils 1.2.
 
 * Remove the "rawsource" argument from nodes.Text.__init__()
   (deprecated and ignored since Docutils 0.18) in Docutils 1.3.
+  
+* Remove the compatibility hacks `nodes.reprunicode` and `nodes.ensure_str()`
+  in Docutils 1.2. They are not required with Python 3.x.
 
 * Move math format conversion from docutils/utils/math (called from
   docutils/writers/_html_base.py) to a transform__.
